<resources>
	<string name="app_name">Calisthenico</string>
	<string name="hello_world">Hello world!</string>

	<!-- Menu actions -->
	<string name="action_settings">Settings</string>
	<string name="action_done">Done</string>
	<string name="action_delete">Delete</string>
	<string name="action_edit">Edit</string>
	<string name="action_add_routine">Add routine</string>

	<!-- Dialogs -->
	<string name="dialog_cycles">Number of cycles</string>
	<string name="dialog_rest_between_cycles">Rest between cycles</string>
	<string name="dialog_rest_between_exercises">Rest between exercises</string>
	<string name="dialog_add_exercise">Add exercise</string>

	<!-- Hints -->
	<string name="hint_routine_title">Routine title</string>
	<string name="hint_cycles">Number of cycles</string>
	<string name="hint_rest_between_exercises">Rest between exercises (secs)</string>
	<string name="hint_rest_between_cycles">Rest between cycles (secs)</string>
	<string name="hint_exercise_title">Exercise title</string>
	<string name="hint_exercise_reps">Rep count</string>

	<!-- Labels -->
	<string name="label_exercises">Exercises</string>
	<string name="label_cycles">Cycles</string>
	<string name="label_rest_cycles">Between cycles</string>
	<string name="label_rest_exercises">Between exercises</string>
	<string name="label_is_timed">Is timed</string>
	<string name="label_saved_routines">Saved routines</string>
	<string name="label_rest">Rest</string>
	<string name="label_do">Do</string>
	<string name="label_seconds">Seconds</string>
	<string name="label_next_exercise">Next exercise:\n%s</string>

	<!-- Descriptions -->
	<string name="description_grabber">List sorting handle</string>

	<!-- Toasts -->
	<string name="toast_empty_exercises">You didn\'t add any exercises to this routine</string>
	<string name="toast_empty_routine_title">You didn\'t specify a title for this routine</string>
	<string name="toast_empty_exercise_name">You didn\'t specify a name for this exercise</string>

	<!-- Activities -->
	<string name="title_activity_routine_create">Routine editor</string>
	<string name="title_activity_routine_browser">Routines</string>
	<string name="title_activity_routine_viewer">Routine Viewer</string>
	<string name="title_activity_routine_execution">RoutineExecutionActivity</string>
</resources>
