<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.lkunic.apps.calisthenico.activities.RoutineCreateActivity">

	<EditText
		android:id="@+id/et_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_routine_title"/>

	<EditText
		android:id="@+id/et_cycles"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_routine_cycles"
		android:inputType="number"/>
	<EditText
		android:id="@+id/et_rest_between_exercises"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_rest_between_exercises"
		android:inputType="number"/>
	<EditText
		android:id="@+id/et_rest_between_cycles"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_rest_between_cycles"
		android:inputType="number"/>

</LinearLayout>
